--- a/index.html
+++ b/index.html
@@ -1,18 +1,36 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="ru">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>my-first-website</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
+ 	<title>lending</title>
+ 	<meta charset="utf-8">
+ 	<meta description="boilerplate code">
+ 	<meta keywords="boilerplate, test">
+ 	<link rel="stylesheet" href="css/style.css">
+
+ 	<link href="https://fonts.googleapis.com/css?family=Bangers|Orbitron&display=swap" rel="stylesheet">
+
 </head>
-
 <body>
+	<div>
+		<header class="header">
+			<section class="header_words"><h1> Wokkta</h1>
+			</section>
 
-<img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
+			<img src="img/First_background.img" alt="">
+			<section class="header_words"><a href="C:\Users\Алексей\Desktop\WEbDEv_MCS-master\dz-1\index.html">Музыкант</a><a href="..\practice6\index.html">   Next work</a>
+				<a href="https://github.com/Wokkta">   Wanna view my GitHub ?</a>
+			</section>
 
-<!-- Change this code here by copy and pasting your template on line 15 -->
-<p>Welcome to your first GitHub Pages website!</p>
-
+		</header>
+		<main>
+			
+			<section><div>Hello , my name is couch potato,and now I'm here.</div> 
+			</section>
+			<section class="header_words"></section>
+		</main>
+		<footer>
+			<div></div>
+		</footer>
+	</div>
 </body>
 </html>
