--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			</section>
 
 			<img src="img/First_background.img" alt="">
-			<section class="header_words"><a href="C:\Users\Алексей\Desktop\WEbDEv_MCS-master\dz-1\index.html">Музыкант</a><a href="..\practice6\index.html">   Next work</a>
+			<section class="header_words"><a href="https://github.com/Wokkta/WEbDEv_MCS/blob/master/dz-1/index.html">Музыкант</a><a href="..\practice6\index.html">   Next work</a>
 				<a href="https://github.com/Wokkta">   Wanna view my GitHub ?</a>
 			</section>
 
